--- a/certification/openstack/task_arguments.yaml
+++ b/certification/openstack/task_arguments.yaml
@@ -9,3 +9,7 @@
   image_name: "^(cirros.*uec|TestVM)$"
   flavor_name: "m1.tiny"
   glance_image_location: ""
+  smoke: true
+  users_amount: 1
+  tenants_amount: 1
+  controllers_amount: 1
