Add "description" to task config
Fetch "description" from scenario doc string if no user specified
description then add it to the task config. String "description"
property will be added to the config.

Partial-bug: #1447496

Co-Authored-By: Andrey Kurilin <andr.kurilin@gmail.com>

Change-Id: I882938e86d6c8209b669d7220285e8aa05bdd3e3

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -298,6 +298,7 @@
           max_degradation: 50
 
     -
+      description: "Check 'constant' runner."
       args:
         sleep: 0.25
       runner:
@@ -310,6 +311,7 @@
           max: 0
 
     -
+      description: "Check 'constant_for_duration' runner."
       args:
         sleep: 0.1
       runner:
@@ -321,6 +323,7 @@
           max: 0
 
     -
+      description: "Check 'rps' runner."
       args:
         sleep: 0.001
       runner:
@@ -332,6 +335,7 @@
           max: 0
 
     -
+      description: "Check 'rps' runner with float value of requests per second."
       args:
         sleep: 0.1
       runner:
@@ -354,6 +358,7 @@
           max: 0
 
     -
+      description: "Check 'max_concurrency' and 'max_cpu_count' properties of 'rps' runner."
       args:
         sleep: 0.001
       runner:
@@ -367,6 +372,7 @@
           max: 0
 
     -
+      description: "Check 'serial' runner."
       args:
         sleep: 0.1
       runner:
@@ -390,6 +396,7 @@
         failure_rate:
           max: 0
     -
+      description: "Check 'quotas' context."
       args:
         sleep: 0.01
       runner:
