Reworked script generating tempest.conf
* The config.py script generating tempest.conf was significantly reworked.

* The config.ini file was updated.

* A context class to create/delete all resources needed for Tempest was added.
  How does it work? Before running tests:
    1. The context class creates all roles needed for Tempest;
    2. If the image_ref option is not specified in the tempest.conf file,
       the context class will create an image for this option and add ID of
       the created image to tempest.conf;
    3. The same is for 'image_ref_alt', 'flavor_ref' and 'flavor_ref_alt';
    4. Once tests finish, all created resources will be deleted. All IDs of
       created resources will be deleted from tempest.conf.

* The TempestConfigCreationFailure exception was moved to the exceptions.py
  file. In addition, the TempestResourceCreationFailure exception was added.

* The rally-verify.sh script was changed. The index_verify.mako file was changed
  as well in accordance with changes in rally-verify.sh.

* All relevant unit tests were updated in accordance with new changes.

Closes-bug: #1454648

Change-Id: If32e51d6ce1f6bf7421021d151005cc75ed34953

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -615,14 +615,29 @@
 # From rally
 #
 
-# Version of cirros image (string value)
-#cirros_version = 0.3.4
+# CirrOS image URL (string value)
+#cirros_img_url = http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img
 
-# Cirros image name (string value)
-#cirros_image = cirros-0.3.4-x86_64-disk.img
 
-# Cirros image base URL (string value)
-#cirros_base_url = http://download.cirros-cloud.net
+[role]
+
+#
+# From rally
+#
+
+# Role required for users to be able to create Swift containers
+# (string value)
+#swift_operator_role = Member
+
+# User role that has reseller admin (string value)
+#swift_reseller_admin_role = ResellerAdmin
+
+# Role required for users to be able to manage Heat stacks (string
+# value)
+#heat_stack_owner_role = heat_stack_owner
+
+# Role for Heat template-defined users (string value)
+#heat_stack_user_role = heat_stack_user
 
 
 [users_context]
