--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -3,50 +3,55 @@ debug = True
 log_file = tempest.log
 use_stderr = False
 
-[auth]
-allow_tenant_isolation = False
-
 [boto]
-instance_type = m1.nano
 http_socket_timeout = 30
-build_interval = 1
-build_timeout = 196
 
 [compute]
-ssh_connect_method = floating
+image_ref =
+image_ref_alt =
+flavor_ref =
+flavor_ref_alt =
+ssh_user = cirros
 image_ssh_user = cirros
 image_alt_ssh_user = cirros
-network_for_ssh = private
-ssh_user = cirros
-build_interval = 1
-build_timeout = 196
 
 [compute-feature-enabled]
-change_password = False
 live_migration = False
-block_migration_for_live_migration = False
+resize = True
+vnc_console = False
+attach_encrypted_volume = False
+
+[dashboard]
+
+[data_processing-feature-enabled]
+plugins = vanilla,cdh,mapr,spark,ambari
 
 [identity]
 
+[image-feature-enabled]
+deactivate_image = True
+
 [network]
-tenant_networks_reachable = False
 
 [network-feature-enabled]
-api_extensions = all
+ipv6_subnet_attributes = True
 ipv6 = True
+
+[object-storage]
 
 [oslo_concurrency]
 
+[orchestration]
+max_template_size = 5440000
+max_resources_per_stack = 20000
+
 [scenario]
-large_ops_number = 0
-ssh_user = cirros
+large_ops_number = 2
 
 [service_available]
 
 [validation]
-ssh_timeout = 196
-ip_version_for_ssh = 4
+run_validation = False
 
-[volume]
-build_interval = 1
-build_timeout = 196
+[volume-feature-enabled]
+bootable = True
