Fix LB create and delete VIPs failure when concurrency > 1
Create pools in the scenario instead of context because only one VIP
can be associated for a pool. Thus when concurrency>1 failures are
avoided.

Closes-bug: #1501467
Change-Id: Ibed79807f812a4e46cce0252cfffa8a59624081b

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -209,19 +209,17 @@
   NeutronLoadbalancerV1.create_and_delete_vips:
     -
       args:
+        pool_create_args: {}
         vip_create_args: {}
       runner:
         type: "constant"
         times: {{smoke or 20}}
-        concurrency: {{smoke or 1}}
+        concurrency: {{smoke or 10}}
       context:
         users:
           tenants: {{smoke or 5}}
           users_per_tenant: {{smoke or 2}}
         network: {}
-        lbaas:
-          pool: {}
-          lbaas_version: 1
         quotas:
           neutron:
             network: -1
