workload: fix and rename benchmark script
Benchmark script uploaded by the custom_image is installing a benchmark
and should be named accordingly.

Also, fix the size of the read benchmark.

Change-Id: Id75db4b06acfa04145feb3bf07ea6a9c91b03d9f
Closes-Bug: #1502838

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -603,8 +603,8 @@
       context:
         image_command_customizer:
           command:
-            local_path: "/home/jenkins/.rally/extra/script_benchmark.sh"
-            remote_path: "./script_benchmark.sh"
+            local_path: "/home/jenkins/.rally/extra/install_benchmark.sh"
+            remote_path: "./install_benchmark.sh"
           flavor:
             name: "m1.tiny"
           image:
