--- a/samples/tasks/scenarios/vm/boot_runcommand_delete_custom_image.yaml
+++ b/samples/tasks/scenarios/vm/boot_runcommand_delete_custom_image.yaml
@@ -15,8 +15,8 @@ VMTasks.boot_runcommand_delete_custom_image:
     context:
       image_command_customizer:
         command:
-          local_path: "rally-jobs/extra/script_benchmark.sh"
-          remote_path: "./script_benchmark.sh"
+          local_path: "rally-jobs/extra/install_benchmark.sh"
+          remote_path: "./install_benchmark.sh"
         flavor:
           name: m1.small
         image:
