Configure Tempest to use isolated tenants
Rally is running Tempest in parallel but it is not configuring it to
run in parallel correctly. For Tempest to be able to run in parallel
correctly it needs to be set up to use either Tenant Isolation, or
Locking Test Accounts, currently Rally was configuring Tempest to use
Non-Locking Test Accounts which could cause execution problems due to
tempest not being able to isolate tests properly.

Change-Id: Idb224ff3dfd4cca9154baabeffb1a520bbb82754
Closes-Bug: 1493147

--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -3,6 +3,10 @@ debug = True
 log_file = tempest.log
 use_stderr = False
 
+[auth]
+allow_tenant_isolation = True
+create_isolated_networks = False
+
 [boto]
 http_socket_timeout = 30
 
