--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -138,6 +138,16 @@
 # point value)
 #cinder_volume_delete_poll_interval = 2.0
 
+# Time to sleep after boot before polling for status (floating point
+# value)
+#ec2_server_boot_prepoll_delay = 1.0
+
+# Server boot timeout (floating point value)
+#ec2_server_boot_timeout = 300.0
+
+# Server boot poll interval (floating point value)
+#ec2_server_boot_poll_interval = 1.0
+
 # Time to sleep after creating a resource before polling for it status
 # (floating point value)
 #glance_image_create_prepoll_delay = 2.0
@@ -233,6 +243,10 @@
 # scale up or down. (floating point value)
 #heat_stack_scale_poll_interval = 1.0
 
+# Interval(in sec) between checks when waiting for node creation.
+# (floating point value)
+#ironic_node_create_poll_interval = 1.0
+
 # Delay between creating Manila share and polling for its status.
 # (floating point value)
 #manila_share_create_prepoll_delay = 2.0
@@ -250,6 +264,22 @@
 # Interval between checks when waiting for Manila share deletion.
 # (floating point value)
 #manila_share_delete_poll_interval = 2.0
+
+# A timeout in seconds for an environment delete (integer value)
+# Deprecated group/name - [DEFAULT]/delete_environment_timeout
+#murano_delete_environment_timeout = 180
+
+# A timeout in seconds for an environment deploy (integer value)
+# Deprecated group/name - [DEFAULT]/deploy_environment_timeout
+#murano_deploy_environment_timeout = 1200
+
+# Delete environment check interval in seconds (integer value)
+# Deprecated group/name - [DEFAULT]/delete_environment_check_interval
+#murano_delete_environment_check_interval = 2
+
+# Deploy environment check interval in seconds (integer value)
+# Deprecated group/name - [DEFAULT]/deploy_environment_check_interval
+#murano_deploy_environment_check_interval = 5
 
 # Time to sleep after start before polling for status (floating point
 # value)
@@ -468,29 +498,31 @@
 #nova_detach_volume_poll_interval = 2.0
 
 # A timeout in seconds for a cluster create operation (integer value)
-#cluster_create_timeout = 1800
+# Deprecated group/name - [DEFAULT]/cluster_create_timeout
+#sahara_cluster_create_timeout = 1800
 
 # A timeout in seconds for a cluster delete operation (integer value)
-#cluster_delete_timeout = 900
+# Deprecated group/name - [DEFAULT]/cluster_delete_timeout
+#sahara_cluster_delete_timeout = 900
 
 # Cluster status polling interval in seconds (integer value)
-#cluster_check_interval = 5
+# Deprecated group/name - [DEFAULT]/cluster_check_interval
+#sahara_cluster_check_interval = 5
 
 # A timeout in seconds for a Job Execution to complete (integer value)
-#job_execution_timeout = 600
+# Deprecated group/name - [DEFAULT]/job_execution_timeout
+#sahara_job_execution_timeout = 600
 
 # Job Execution status polling interval in seconds (integer value)
-#job_check_interval = 5
+# Deprecated group/name - [DEFAULT]/job_check_interval
+#sahara_job_check_interval = 5
 
-# Time to sleep after boot before polling for status (floating point
-# value)
-#ec2_server_boot_prepoll_delay = 1.0
+# Interval between checks when waiting for a VM to become pingable
+# (floating point value)
+#vm_ping_poll_interval = 1.0
 
-# Server boot timeout (floating point value)
-#ec2_server_boot_timeout = 300.0
-
-# Server boot poll interval (floating point value)
-#ec2_server_boot_poll_interval = 1.0
+# Time to wait for a VM to become pingable (floating point value)
+#vm_ping_timeout = 120.0
 
 
 [cleanup]
