[Verify] Adding creation of network resources to Tempest context
Tempest creates private network resources for all tests by default.
If a cloud has some shared networks, many Tempest tests will fail with
the following error:

    "Multiple possible networks found."

To avoid this issue we have to configure the fixed_network_name option
in the Tempest config file. So this patch proposes the following solution:

    if the cloud doesn't have any shared networks, the default behavior
    defined in Tempest will be used and Tempest itself will manage network
    resources;

    if the cloud has some shared networks, we will create our own shared
    network and specify its name in the Tempest config file;

    if user configures the fixed_network_name option in the tempest.conf
    file manually, then we don't need to do anything.

Unit tests for new methods and missing unit tests were added.

Change-Id: I487806fe9a8ccd8528922cfaa2700df30961ef9b

--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -11,6 +11,7 @@ image_ref =
 image_ref_alt =
 flavor_ref =
 flavor_ref_alt =
+fixed_network_name =
 ssh_user = cirros
 image_ssh_user = cirros
 image_alt_ssh_user = cirros
