Add neutron jobs to certification task arguments
Also minor issues fixed:
 - add neutron quota info only if neutron service is available
 - add missing task args to test command

Change-Id: If514dea99f2e7e6d0d09d097b8e2e8886abaf4d5

--- a/certification/openstack/macro/macro.yaml
+++ b/certification/openstack/macro/macro.yaml
@@ -80,10 +80,12 @@
 {%- endmacro %}
 
 {%- macro unlimited_neutron() %}
+{% if "neutron" in service_list %}
           neutron:
             network: -1
             port: -1
             subnet: -1
+{% endif %}
 {%- endmacro %}
 
 {%- macro glance_args(location, container="bare", type="qcow2") %}
