Implement new random name generator for keystone scenarios
This switches keystone scenarios to using the new consistent random
name generator.

Implements blueprint: consistent-resource-names
Change-Id: Ie753b6c6b570ce40bd17df545df4a2cde2c4bc50

--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -2,8 +2,7 @@
 
   KeystoneBasic.create_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
@@ -14,8 +13,7 @@
 
   KeystoneBasic.create_delete_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
@@ -26,8 +24,7 @@
 
   KeystoneBasic.create_and_list_tenants:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
@@ -38,8 +35,7 @@
 
   KeystoneBasic.create_and_list_users:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
@@ -50,8 +46,7 @@
 
   KeystoneBasic.create_tenant:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
@@ -63,7 +58,6 @@
   KeystoneBasic.create_tenant_with_users:
     -
       args:
-        name_length: 10
         users_per_tenant: 10
       runner:
         type: "constant"
@@ -78,8 +72,7 @@
 
   KeystoneBasic.create_delete_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 1
