--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1,8 +1,7 @@
 ---
   KeystoneBasic.create_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -13,8 +12,7 @@
 
   KeystoneBasic.create_delete_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -47,8 +45,7 @@
 
   KeystoneBasic.create_and_list_tenants:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -127,8 +124,7 @@
 
   KeystoneBasic.create_and_list_users:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -139,8 +135,7 @@
 
   KeystoneBasic.create_tenant:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -152,7 +147,6 @@
   KeystoneBasic.create_tenant_with_users:
     -
       args:
-        name_length: 10
         users_per_tenant: 10
       runner:
         type: "constant"
@@ -167,9 +161,7 @@
 
   KeystoneBasic.create_user_update_password:
     -
-      args:
-        name_length: 10
-        password_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -180,8 +172,7 @@
 
   KeystoneBasic.create_update_and_delete_tenant:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
@@ -192,8 +183,7 @@
 
   KeystoneBasic.create_delete_user:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 10
