--- a/samples/tasks/scenarios/keystone/create-update-and-delete-tenant.yaml
+++ b/samples/tasks/scenarios/keystone/create-update-and-delete-tenant.yaml
@@ -1,8 +1,7 @@
 ---
   KeystoneBasic.create_update_and_delete_tenant:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 100
