Implement new random name generator for remaining scenario plugins
This switches all remaining scenarios to using the new consistent
random name generator. Keystone scenarios were switched in a previous
commit.

Implements blueprint: consistent-resource-names
Change-Id: I4d7defc328a516e7f84744c9a0fcaeb3b5f94d0c

--- a/rally-jobs/rally-zaqar.yaml
+++ b/rally-jobs/rally-zaqar.yaml
@@ -1,8 +1,7 @@
 ---
   ZaqarBasic.create_queue:
     -
-      args:
-        name_length: 10
+      args: {}
       runner:
         type: "constant"
         times: 100
@@ -14,7 +13,6 @@
   ZaqarBasic.producer_consumer:
     -
       args:
-        name_length: 10
         min_msg_count: 50
         max_msg_count: 200
       runner:
