--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -579,6 +579,23 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        key_type: "x509"
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        api_versions:
+          nova:
+            version: 2.2
+      sla:
+        failure_rate:
+          max: 0
 
   NovaKeypair.create_and_list_keypairs:
     -
@@ -611,6 +628,29 @@
           users_per_tenant: 2
         network:
           start_cidr: "10.2.0.0/24"
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: {{image_name}}
+        key_type: "x509"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network:
+          start_cidr: "10.2.0.0/24"
+        api_versions:
+          nova:
+            version: 2.2
       sla:
         failure_rate:
           max: 0
